Added post outfit feature (to feed)
- fixed new post button
- added caption handling
- fixed image processing when building grid

--- a/templates/createoutfit.html
+++ b/templates/createoutfit.html
@@ -116,6 +116,10 @@
                 {% endfor %}
             </select>
 
+            <!-- Name Text Box -->
+
+            <textarea class="button soft-warning small" name="outfit_name" placeholder="The name of your outfit..."></textarea>
+
             <!-- Submit Button -->
             <button type="submit" class="w-full bg-pink-500 text-white font-semibold py-2 mt-4 rounded">Submit Outfit</button>
         </form>
