--- a/templates/index.html
+++ b/templates/index.html
@@ -76,20 +76,29 @@
                         <button class="btn-upload post-outfit" type="button" uk-toggle="target: .post-dropdown" >
                             <ion-icon name="add-circle" class="-mb-1 mr-1 opacity-90 text-xl"></ion-icon> New Post
                         </button>
-                    
-                        <div class="dropdown-menu post-dropdown hidden">
+        
+                        <!-- <div class="dropdown-menu post-dropdown hidden">
+    
+                        </div> -->
+
+                        <div uk-dropdown="pos: bottom-right;mode:click ; animation: uk-animation-slide-bottom-small" class="post-dropdown hidden">
                             <form action="{% url 'post-outfit' %}" method="POST">
                                 {% csrf_token %}
                                 <div class="py-1" role="none">
-                                    <label for="outfit" class="block text-gray-700 px-4 py-2 text-sm">Select Outfit</label>
+                                    <p class ="">Select Outfit</p>
                                     <select name="outfit_id" id="outfit" class="w-full border rounded px-4 py-2">
                                         <option value="">Choose Outfit</option>
                                         {% for outfit in outfits %}
-                                            <option value="{{ outfit.id }}">{{ outfit.top.item_name }} / {{ outfit.bottom.item_name }}</option>
+                                            {% if outfit.name != "" %}
+                                                <option value="{{ outfit.id }}">{{ outfit.name }}</option>
+                                            {% else %}
+                                                <option value="{{ outfit.id }}">{{ outfit.top.item_name }} / {{ outfit.bottom.item_name }}</option>
+                                            {% endif %}
                                         {% empty %}
                                             <option disabled>No outfits available</option>
                                         {% endfor %}
                                     </select>
+                                    <textarea class="button soft-warning small" name="post_caption" placeholder="The caption of your post..."></textarea>
                                 </div>
                                 <div class="py-1" role="none">
                                     <button type="submit" class="">Post Outfit</button>
@@ -97,7 +106,7 @@
                             </form>
                         </div>
                     </div>
-                                        
+                            
                     <!-- Upload Clothes Button -->
                     <div class="upload-clothes" uk-toggle="target: .upload-dropdown">
                         <a href="#" class="btn-upload">
@@ -195,6 +204,11 @@
                                 <li><a href="#">Share</a></li>
                                 <li><a href="#">Edit</a></li>
                                 <li><a href="#">Favorite</a></li>
+                                <li>
+                                    <a href="/delete-post?post_id={{post.id}}" class="flex items-center px-3 py-2 text-red-500 hover:bg-red-100 hover:text-red-500 rounded-md ">
+                                    <i class="uil-trash-alt mr-1"></i>  Delete
+                                    </a> 
+                                </li>
                             </ul>
                         </div>
                         </div>
