Closet page created

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                     <div uk-dropdown="mode: click; offset: 9" class="header-dropdown profile-dropdown border-t hidden">
                         <ul>
                             <li><a href="profile/{{user_profile.user.username}}">Profile</a></li>
-                            <li><a href="profile/{{user_profile.user.username}}">Closet</a></li>
+                            <li><a href="closet/{{user_profile.user.username}}">Closet</a></li>
                             <li><a href="settings">Settings</a></li>
                             <li><a href="logout">Log Out</a></li>
                         </ul>
