--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,6 +11,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{% static 'css/profile.css' %}">
     <title>Profile - {{user_profile.user.username}}</title>
+
+	<style>
+		.logo a{
+			font-weight: 500;
+		}
+	</style>
 </head>
 
 <body>
