--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,10 @@
             color: white;
             font: Rozha One, serif;
         }
+
+        .logo a{
+            font-weight: 500;
+        }
     </style>
 </head>
 
