--- a/static/css/index.css
+++ b/static/css/index.css
@@ -52,14 +52,14 @@ body {
     margin-top: 60px; /* Matches the height of the topbar */
     margin-left: 320px; /* Matches the width of the sidebar */
     padding: 20px; /* Optional padding for spacing inside the feed */
-    background-color: white; /* Optional background color */
+    background-color:  #f6f4ebff; /* Optional background color */
     box-sizing: border-box; /* Ensures padding is included in the width */
     font-family: 'Rozha One', serif;
     overflow-y: auto; /* Ensures scrollable content if it exceeds viewport height */
 }
 
 .post-container {
-    background-color: #fff;
+    background-color: #f6f4ebff;
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 16px;
@@ -71,6 +71,8 @@ body {
 
 .posts-wrapper {
     margin-top:50px;
+    background-color: #f6f4ebff;
+
     /* margin-right: 200px; */
 }
 
@@ -620,7 +622,7 @@ body {
 /* General Reset and Styling for Custom Feed */
 .custom-feed {
     font-family: 'Arial', sans-serif;
-    background-color: rgb(255, 255, 255);
+    background-color:#f6f4ebff;
     color: #333;
 }
 
