--- a/templates/index.html
+++ b/templates/index.html
@@ -263,7 +263,7 @@
                         <!-- Post Header -->
                         <div class="post-headers">
                             <div class="post-user">
-                                <a href="profile/{{post.user}}" class="font-bold text-lg">@{{post.user}}</a>
+                                <a href="profile/{{post.user}}" class="font-bold text-lg" style="font-size: 300">@{{post.user}}</a>
                             </div>
                             {% if post.user == user.username %}
                             <div>
@@ -272,7 +272,7 @@
                                 </a>
                                 <div uk-dropdown="mode: click; offset: 9" class="header-dropdown profile-dropdown border-t hidden">
                                     <ul>
-                                        <li><a href="#">Edit Caption</a></li>
+                                        <!-- <li><a href="#">Edit Caption</a></li> -->
                                         <li>
                                             <a href="/delete-post?post_id={{post.id}}" class="flex items-center px-3 py-2 text-red-500 hover:bg-red-100 hover:text-red-500 rounded-md">
                                                 <i class="uil-trash-alt mr-1"></i> Delete
@@ -306,11 +306,11 @@
                                         {% endif %}
                                     </div>
                                 </a>
-                                <a href="#" class="flex items-center space-x-2 flex-1 justify-end">
+                                <!-- <a href="#" class="flex items-center space-x-2 flex-1 justify-end">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" width="25" height="25">
                                         <path d="M8.5 1.5A1.5 1.5 0 0 1 10 0h4a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h6c-.314.418-.5.937-.5 1.5v6h-2a.5.5 0 0 0-.354.854l2.5 2.5a.5.5 0 0 0 .708 0l2.5-2.5A.5.5 0 0 0 10.5 7.5h-2v-6z" />
                                     </svg>
-                                </a>
+                                </a> -->
                             </div>
                             <p>
                                 <a href="#" class="font-semibold">{{post.user}}</a>: {{post.caption}}
